# PyArsenal

./: .gitignore  README.md  build_linux.sh  build_windows.bat  index.html  package-lock.json  package.json
.github/workflows/: build-release.yml
catalog/: catalog.json
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  github.rs  lib.rs  main.rs  models.rs  paths.rs
src-tauri/src/commands/: admin.rs  catalog.rs  desktop.rs  install.rs  launch.rs  library.rs  links.rs  mod.rs  settings.rs  update.rs
src/components/: SearchBar.tsx  Sidebar.tsx  Toast.tsx  ToolCard.tsx  ToolDetail.tsx
src/lib/: api.ts  stores.ts  themes.ts  types.ts
src/pages/: AboutPage.tsx  AddToolPage.tsx  DownloadsPage.tsx  LibraryPage.tsx  SettingsPage.tsx  StatsPage.tsx  StorePage.tsx  ThemesPage.tsx
