[package]
name = "pyarsenal"
version = "0.3.5"
description = "Personal tool distribution and update launcher"
authors = ["Alessandro"]
edition = "2021"

[lib]
name = "pyarsenal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
semver = { version = "1", features = ["serde"] }
thiserror = "2"
dirs = "6"
flate2 = "1"
tar = "0.4"
zip = "2"
keyring = { version = "3", features = ["sync-secret-service", "windows-native"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
bytes = "1"
tokio-util = "0.7"
base64 = "0.22"
